--- a/aws/configure/Jenkinsfile
+++ b/aws/configure/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
     stages {
         stage('configure') {
             steps {
-                sh 'aws configure --profile $Profile $Variable $Value'
+                sh 'aws configure --profile $Profile set $Variable $Value'
             }
         }
     }
